--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         <td class="column6 style0">vacated</td>
         <td class="column7 style0">&quot;Application status notes that the resp's application for ERAP has not been submitted.&quot;</td>
       </tr>
-      <tr class="row36">
+      <!-- <tr class="row36">
         <td class="column3 style0">Gregory v. Pacheco</td>
         <td class="column0 style0">7/19/2022</td>
         <td class="column1 style0">New York</td>
@@ -390,7 +390,7 @@
         <td class="column7 style0">&quot;The court must conclude that had the legislature required petitioner to present proof of its intent<br />
           to utilize the premises for his or her own use as a primary residence or that of his or her family's,<br />
           the legislature would have done so.&quot;</td>
-      </tr>
+      </tr> -->
     </tbody>
   </table>
   <!-- <tfoot>
