--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+  <em>Click the case name to view the text of its decision (some are unpublished.) Expand to see<span class="mobile-only"> more information, including</span> a snippet of the decision's reasoning. The colors show the result of the decision: <span
+      style="background-color:pink;padding:2px;">pause affirmed in red</span>, <span style="background-color:lightsteelblue;padding:2px;">pause vacated in blue</span>.</em><br />
+  <br />
   <table border="0" cellpadding="0" cellspacing="0" id="sheet0" class="sheet0 gridlines">
     <col class="col0">
     <col class="col1">
@@ -375,7 +378,7 @@
         <td class="column3 style0">Brisbane Leasing v. Williams</td>
         <td class="column0 style0">7/12/2022</td>
         <td class="column1 style0">Queens</td>
-        <td class="column2 style0">Ofshtein</td>
+        <td class="column2 style0">Ressos</td>
         <td class="column4 style0">nonpayment</td>
         <td class="column6 style0">vacated</td>
         <td class="column7 style0">&quot;Application status notes that the resp's application for ERAP has not been submitted.&quot;</td>
