--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <td class="column4 style0">holdover</td>
         <td class="column6 style0">affirmed</td>
         <td class="column7 style0">&quot;The restrictions on evictions do not exclude a proceeding based upon the status of <br />
-          the applicant as a &quot;tenant&quot; or &quot;occupant&quot; and the Court is not persuaded that the <br />
+          the applicant as a 'tenant' or 'occupant' and the Court is not persuaded that the <br />
           legislature intended a selective application of the stay on this basis.&quot;</td>
       </tr>
       <tr class="row9">
